--- a/app/views/people/index.html.erb
+++ b/app/views/people/index.html.erb
@@ -1,5 +1,5 @@
 <div ng-app="app">
-  <div ng-controller="peopleCtrl">
+  <div ng-controller="peopleCtrl" ng-init="setup()">
     
     <p>People Count: {{ peopleCount }}</p>
 
