added angular animations and dependency injection

--- a/app/assets/stylesheets/people.scss
+++ b/app/assets/stylesheets/people.scss
@@ -6,3 +6,9 @@
 .strike {
   text-decoration: line-through;
 }
+
+table, th, td {
+    border: 1px solid black;
+    border-collapse: collapse;
+}
+
